友链显示描述信息

--- a/apps/blog/templates/blog/friend.html
+++ b/apps/blog/templates/blog/friend.html
@@ -22,8 +22,8 @@
                             <div class="friend-container"
                                  style='background-image: url("{{ friend.logo.url }}");'>
                                 <div class="friend-img">
-                                    <img src="{{ friend.logo.url }}"
-                                         alt="{{ friend.description }}">
+                                    <img src="{{ friend.logo.url }}" alt="{{ friend.description }}">
+                                    <div class="friend-description">{{ friend.description }}</div>
                                 </div>
                                 <div class="friend-title"><span>{{ friend.name }}</span></div>
                             </div>
