--- a/apps/blog/static/blog/css/base.css
+++ b/apps/blog/static/blog/css/base.css
@@ -552,6 +552,14 @@ ul.checklist li {
     color: inherit; /* 使用继承的颜色 */
 }
 
+.friend-list a:hover img {
+    display: none;
+}
+
+.friend-list a:hover .friend-description {
+    display: initial;
+}
+
 .friend-img {
     width: 100%;
     height: 100%;
@@ -569,16 +577,28 @@ ul.checklist li {
     transition: All 1s ease-in-out;
 }
 
-.friend-img img:hover {
-    -webkit-transition: All 1s ease-in-out;
-    -moz-transition: All 1s ease-in-out;
-    -o-transition: All 1s ease-in-out;
-    transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
+.friend-img .friend-description {
+    display: none;
+    position: absolute;
+    padding: 12px 10px 12px 10px;
+    font-size: 12px;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
 }
+
+/*.friend-img img:hover {*/
+/*    -webkit-transition: All 1s ease-in-out;*/
+/*    -moz-transition: All 1s ease-in-out;*/
+/*    -o-transition: All 1s ease-in-out;*/
+/*    transform: rotate(360deg);*/
+/*    -webkit-transform: rotate(360deg);*/
+/*    -moz-transform: rotate(360deg);*/
+/*    -o-transform: rotate(360deg);*/
+/*    -ms-transform: rotate(360deg);*/
+/*}*/
 
 .friend-container .friend-title {
     width: 100%;
