--- a/apps/blog/templates/blog/friend.html
+++ b/apps/blog/templates/blog/friend.html
@@ -50,7 +50,11 @@
                             {% endfor %}
                         </div>
                     {% endif %}
+                    <div class="friend-request">
+                        <a href="{% url 'blog:friend_add' %}">👉&nbsp;申请友链&nbsp;👈</a>
+                    </div>
                 </div>
+
             </div>
         </div>
     </div>
