优化缓存设置，使用动态参数设置缓存

--- a/apps/blog/templates/blog/timeline.html
+++ b/apps/blog/templates/blog/timeline.html
@@ -19,7 +19,8 @@
     <div class="page-header mt-0">
         <h1 id="timeline"><i class="fa fa-hourglass-half mr-2"></i>建站日志</h1>
     </div>
-    {% cache 3600 * 24 'cache_name' %}
+    {% get_new_timeline_id as new_timeline_id %}
+    {% cache 2592000 'template:timeline' new_timeline_id %}
     <ul class="timeline" id="timeline">
         {% for timeline in timeline_list %}
         {% if timeline.side == 'L' %}
