--- a/apps/blog/templates/blog/archive.html
+++ b/apps/blog/templates/blog/archive.html
@@ -21,7 +21,8 @@
 {% block base_content %}
 <div class="container">
     <div class="row">
-        {% cache 3600 'cache_archive_html_tag_new' %}
+        {% get_new_article_id as new_article_id %}
+        {% cache 2592000 'template:archive' new_article_id %}
         <div class="col-lg-8">
             <div class="card border-0 rounded-6 mb-3">
                 <div class="card-body f-16 archive">
