--- a/apps/blog/templates/blog/archive.html
+++ b/apps/blog/templates/blog/archive.html
@@ -22,7 +22,7 @@
 <div class="container">
     <div class="row">
         {% get_new_article_id as new_article_id %}
-        {% cache 2592000 'template:archive' new_article_id %}
+        {% cache 86400 'template:archive' new_article_id %}
         <div class="col-lg-8">
             <div class="card border-0 rounded-6 mb-3">
                 <div class="card-body f-16 archive">
