--- a/apps/blog/templates/blog/friendAdd.html
+++ b/apps/blog/templates/blog/friendAdd.html
@@ -41,63 +41,62 @@
                                data-toggle="modal"
                                data-target="#friendModal"
                                data-whatever="@mdo">符合以上条件</a>
-                            <div class="modal fade" id="friendModal" tabindex="-1" role="dialog"
-                                 aria-labelledby="friendModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="friendModalLabel">提交友链</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <form>
-                                                <div class="form-group">
-                                                    <label for="recipient-name"
-                                                           class="col-form-label">网站名称(8字内):</label>
-                                                    <input type="text"
-                                                           maxlength="8"
-                                                           class="form-control"
-                                                           placeholder="如：TendCode"
-                                                           id="link-name">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="message-text"
-                                                           class="col-form-label">网站地址(https开头):</label>
-                                                    <input type="text"
-                                                           maxlength="50"
-                                                           placeholder="如：https://tendcode.com"
-                                                           class="form-control"
-                                                           id="link-link">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="message-text"
-                                                           class="col-form-label">网站描述(30字内):</label>
-                                                    <input type="text"
-                                                           maxlength="30"
-                                                           placeholder="如：Django自建博客，热爱Python"
-                                                           class="form-control"
-                                                           id="link-description">
-                                                </div>
-                                            </form>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button"
-                                                    data-csrf="{{ csrf_token }}"
-                                                    data-api-url="{% url 'blog:friend_add' %}"
-                                                    class="btn btn-info"
-                                                    id="friend-send">提交
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
 
                 </div>
-
+                <div class="modal fade" id="friendModal" tabindex="-1" role="dialog"
+                     aria-labelledby="friendModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content izone-container">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="friendModalLabel">提交友链</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="recipient-name"
+                                               class="col-form-label">网站名称(8字内):</label>
+                                        <input type="text"
+                                               maxlength="8"
+                                               class="form-control"
+                                               placeholder="如：TendCode"
+                                               id="link-name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="message-text"
+                                               class="col-form-label">网站地址(https开头):</label>
+                                        <input type="text"
+                                               maxlength="50"
+                                               placeholder="如：https://tendcode.com"
+                                               class="form-control"
+                                               id="link-link">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="message-text"
+                                               class="col-form-label">网站描述(30字内):</label>
+                                        <input type="text"
+                                               maxlength="30"
+                                               placeholder="如：Django自建博客，热爱Python"
+                                               class="form-control"
+                                               id="link-description">
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button"
+                                        data-csrf="{{ csrf_token }}"
+                                        data-api-url="{% url 'blog:friend_add' %}"
+                                        class="btn btn-info"
+                                        id="friend-send">提交
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
