--- a/apps/blog/static/blog/css/base.css
+++ b/apps/blog/static/blog/css/base.css
@@ -603,7 +603,7 @@ ul.checklist li {
 
 .friend-img .friend-description {
     display: none;
-    color: var(--izone-font-white);
+    color: #fff;
     position: absolute;
     padding: 12px 10px 12px 10px;
     font-size: 12px;
