--- a/apps/blog/templates/blog/archive.html
+++ b/apps/blog/templates/blog/archive.html
@@ -44,7 +44,10 @@
                     </ul>
                 </div>
             </div>
-            {% if is_paginated %}{% load_pages %}{% endif %}
+            {% if is_paginated %}
+                    <div class="d-none d-md-block">{% load_pages 10 %}</div>
+                    <div class="d-md-none">{% load_pages 4 %}</div>
+                {% endif %}
         </div>
         <div class="col-lg-4 d-none d-lg-block">
             {% include 'blog/tags/base_right.html' %}
