--- a/apps/blog/templates/blog/category.html
+++ b/apps/blog/templates/blog/category.html
@@ -35,7 +35,10 @@
                         <i class="fa fa-fire mr-1"></i>热度排序</a>
                 </div>
                 {% load_article_summary articles user %}
-                {% if is_paginated %}{% load_pages %}{% endif %}
+                {% if is_paginated %}
+                    <div class="d-none d-md-block">{% load_pages 10 %}</div>
+                    <div class="d-md-none">{% load_pages 4 %}</div>
+                {% endif %}
             </div>
             <div class="col-lg-4">
                 {% include 'blog/tags/base_right.html' %}
