--- a/apps/blog/templates/blog/tags/pagecut.html
+++ b/apps/blog/templates/blog/tags/pagecut.html
@@ -1,16 +1,19 @@
 {% load blog_tags %}
-<div class="text-center mt-2 mt-sm-1 mt-md-0 mb-3 f-16">
+<div class="page-inner text-center">
     {% if page_obj.has_previous %}
         {% deal_with_full_path request.get_full_path 'page' page_obj.previous_page_number as new_pre_page_path %}
-        <a class="text-success" href="{{ new_pre_page_path }}">上一页</a>
-    {% else %}
-        <span class="text-secondary" title="当前页已经是首页">上一页</span>
+        <a href="{{ new_pre_page_path }}"><span class="n">上一页</span></a>
     {% endif %}
-    <span class="mx-2">第&nbsp;{{ page_obj.number }}&nbsp;/&nbsp;{{ paginator.num_pages }}&nbsp;页</span>
+    {% for page in page_range %}
+        {% if page_obj.number == page %}
+            <span class="page-active">{{ page }}</span>
+        {% else %}
+            {% deal_with_full_path request.get_full_path 'page' page as page_path %}
+            <a href="{{ page_path }}"><span>{{ page }}</span></a>
+        {% endif %}
+    {% endfor %}
     {% if page_obj.has_next %}
         {% deal_with_full_path request.get_full_path 'page' page_obj.next_page_number as new_next_page_path %}
-        <a class="text-success" href="{{ new_next_page_path }}">下一页</a>
-    {% else %}
-        <span class="text-secondary" title="当前页已经是末页">下一页</span>
+        <a href="{{ new_next_page_path }}"><span class="n">下一页</span></a>
     {% endif %}
 </div>
