--- a/apps/blog/templates/blog/friendAdd.html
+++ b/apps/blog/templates/blog/friendAdd.html
@@ -22,7 +22,7 @@
                         <p><strong>本站名称：</strong>{{ site_logo_name }}</p>
                         <p><strong>本站地址：</strong>{{ site_url }}</p>
                         <p><strong>本站描述：</strong>Django自建博客，热爱Python</p>
-                        <p><strong>本站图标：</strong>{{ site_url }}{% static 'blog/img/favicon.ico' %}</p>
+                        <p><strong>本站图标：</strong>{{ site_url }}{% static 'blog/img/friend.png' %}</p>
                     </div>
                     <h2>申请要求</h2>
                     <div class="friend-add">
