--- a/apps/blog/templates/blog/friendAdd.html
+++ b/apps/blog/templates/blog/friendAdd.html
@@ -59,7 +59,7 @@
                                 <form>
                                     <div class="form-group">
                                         <label for="recipient-name"
-                                               class="col-form-label">网站名称(8字内):</label>
+                                               class="col-form-label">网站名称(8字内)</label>
                                         <input type="text"
                                                maxlength="8"
                                                class="form-control"
@@ -68,16 +68,17 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="message-text"
-                                               class="col-form-label">网站地址(https开头):</label>
+                                               class="col-form-label">网站友链地址(https开头)</label>
+                                        <div class="small text-muted mb-2">注：请填写友情链接地址以便查看贵站信息，平台会自动提取主页地址作为外链</div>
                                         <input type="text"
                                                maxlength="50"
-                                               placeholder="如：https://tendcode.com"
+                                               placeholder="如：https://tendcode.com/friend/"
                                                class="form-control"
                                                id="link-link">
                                     </div>
                                     <div class="form-group">
                                         <label for="message-text"
-                                               class="col-form-label">网站描述(30字内):</label>
+                                               class="col-form-label">网站描述(30字内)</label>
                                         <input type="text"
                                                maxlength="30"
                                                placeholder="如：Django自建博客，热爱Python"
