修改文章封面图为上传图片的字段

--- a/apps/blog/templates/blog/tags/article_list.html
+++ b/apps/blog/templates/blog/tags/article_list.html
@@ -6,7 +6,7 @@
             <div class="media mb-1 mb-sm-2 p-2 p-lg-3">
                 <div class="align-self-center rounded-6 mr-2 mr-lg-3 w-25 modal-open">
                     <a href="{{ article.get_absolute_url }}" target="_blank">
-                        <img class="w-100 article-img" src="{{ article.img_link }}" alt="{{ article.title }}">
+                        <img class="w-100 article-img" src="{{ article.img_link.url }}" alt="{{ article.title }}">
                     </a>
                 </div>
                 <div class="media-body">
