--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -10,7 +10,7 @@
 
 
 {% block top-file %}
-{#    <script>var stop_headroom = true;</script>#}
+    {#    <script>var stop_headroom = true;</script>#}
     {% if user.is_authenticated %}
         <link href="https://cdn.bootcss.com/simplemde/1.11.2/simplemde.min.css" rel="stylesheet">
     {% endif %}
@@ -77,35 +77,6 @@
                                 <a class="tags f-16" href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>
                             {% endfor %}
                         </div>
-                        <nav class="more-page f-16">
-                            <ul class="pagination justify-content-between">
-                                <li class="page-item">
-                                    {% if article.get_pre %}
-                                        <a class="d-none d-md-block" href="{{ article.get_pre.get_absolute_url }}"
-                                           title="上一篇：{{ article.get_pre.title }}">
-                                            <i class="fa fa-chevron-left mr-1"></i>
-                                            {{ article.get_pre.title|truncatechars:18 }}
-                                            {% if article.get_pre.title|length > 18 %}...{% endif %}
-                                        </a>
-                                        <a class="d-md-none" href="{{ article.get_pre.get_absolute_url }}">
-                                            <i class="fa fa-chevron-left mr-1"></i>上一篇</a>
-                                    {% endif %}
-                                </li>
-                                <li class="page-item">
-                                    {% if article.get_next %}
-                                        <a class="d-none d-md-block" href="{{ article.get_next.get_absolute_url }}"
-                                           title="下一篇：{{ article.get_next.title }}">
-                                            {{ article.get_next.title|truncatechars:18 }}
-                                            {% if article.get_next.title|length > 18 %}...{% endif %}
-                                            <i class="fa fa-chevron-right ml-1"></i>
-                                        </a>
-                                        <a class="d-md-none" href="{{ article.get_next.get_absolute_url }}">
-                                            下一篇<i class="fa fa-chevron-right ml-1"></i>
-                                        </a>
-                                    {% endif %}
-                                </li>
-                            </ul>
-                        </nav>
                         {% include 'blog/tags/reward.html' %}
                     </div>
                 </div>
@@ -133,14 +104,14 @@
     <!--前后文章-->
     {% if article.get_pre %}
         <div class="more-blog" id="icon-pre-blog">
-            <a href="{{ article.get_pre.get_absolute_url }}">
+            <a href="{{ article.get_pre.get_absolute_url }}" title="上一篇：{{ article.get_pre.title }}">
                 <i class="fa fa-angle-left fa-3x"></i>
             </a>
         </div>
     {% endif %}
     {% if article.get_next %}
         <div class="more-blog" id="icon-next-blog">
-            <a href="{{ article.get_next.get_absolute_url }}">
+            <a href="{{ article.get_next.get_absolute_url }}" title="下一篇：{{ article.get_next.title }}">
                 <i class="fa fa-angle-right fa-3x"></i>
             </a>
         </div>
