--- a/templates/search/blog/search.html
+++ b/templates/search/blog/search.html
@@ -25,7 +25,7 @@
                                 <div class="media mb-1 mb-sm-2 p-2 p-lg-3">
                                     <div class="align-self-center rounded-6 mr-2 mr-lg-3 w-25 modal-open">
                                         <a href="{{ article.object.get_absolute_url }}" target="_blank">
-                                            <img class="w-100 article-img" src="{{ article.object.img_link }}"
+                                            <img class="w-100 article-img" src="{{ article.object.img_link.url }}"
                                                  alt="{{ article.object.title }}">
                                         </a>
                                     </div>
